<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="hello_world">Hello world!</string>

    <string name="my_nanodegree_apps">My Nanodegree Apps!</string>
    <string name="spotify_streamer">SPOTIFY STREAMER</string>
    <string name="scores_app">SCORES APP</string>
    <string name="library_app">LIBRARY APP</string>
    <string name="build_it_bigger">BUILD IT BIGGER</string>
    <string name="bacon_reader">BACON READER</string>
    <string name="capstone_my_own_app">CAPSTONE: MY OWN APP</string>

    <string name="toast_spotify_streamer">Click to launch Spotify Streamer App!</string>
    <string name="toast_scores_app">Click to launch Scores App!</string>
    <string name="toast_library_app">Click to launch Library App!</string>
    <string name="toast_build_it_bigger">Click to launch Build It Bigger App!</string>
    <string name="toast_bacon_reader">Click to launch Bacon Reader App!</string>
    <string name="toast_capstone_my_own_app">Click to launch My Own App!</string>

    <string name="action_settings">Settings</string>
</resources>
