<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:id="@+id/BM_id"
    android:nestedScrollingEnabled="true"
    android:background="#ffdfeaf1">

    <TextView android:text="@string/my_nanodegree_apps" android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView_mynanodegreeapp"
        android:height="48sp"
        android:width="240sp"
        android:gravity="center_horizontal"
        android:layout_alignParentLeft="false"
        android:layout_alignParentRight="false"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textIsSelectable="false"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20sp" />

    <Button
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:text="@string/spotify_streamer"
        android:id="@+id/button_spotifystreamer"
        android:onClick="OnClickButton_spotifystreamer"
        android:textSize="20sp"
        android:background="#f08c35"
        android:layout_below="@+id/textView_mynanodegreeapp"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:text="@string/scores_app"
        android:id="@+id/button_scoresapp"
        android:layout_below="@+id/button_spotifystreamer"
        android:layout_centerHorizontal="true"
        android:onClick="OnClickButton_scoresapp"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:background="#f08c35" />

    <Button
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:text="@string/library_app"
        android:id="@+id/button_libraryapp"
        android:layout_below="@+id/button_scoresapp"
        android:layout_centerHorizontal="true"
        android:onClick="OnClickButton_libraryapp"
        android:layout_marginTop="10sp"
        android:textSize="20sp"
        android:background="#f08c35" />

    <Button
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:text="@string/build_it_bigger"
        android:id="@+id/button_builditbigger"
        android:layout_below="@+id/button_libraryapp"
        android:layout_centerHorizontal="true"
        android:onClick="OnClickButton_builditbigger"
        android:layout_marginTop="10sp"
        android:textSize="20sp"
        android:background="#f08c35" />

    <Button
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:text="@string/bacon_reader"
        android:id="@+id/button__baconreader"
        android:layout_below="@+id/button_builditbigger"
        android:layout_centerHorizontal="true"
        android:onClick="OnClickButton_baconreader"
        android:layout_marginTop="10sp"
        android:textSize="20sp"
        android:background="#f08c35" />

    <Button
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:text="@string/capstone_my_own_app"
        android:id="@+id/button_capstonemyownapp"
        android:onClick="OnClickButton_capstonemyownapp"
        android:layout_below="@+id/button__baconreader"
        android:layout_alignLeft="@+id/button__baconreader"
        android:layout_alignStart="@+id/button__baconreader"
        android:layout_marginTop="10sp"
        android:textSize="20sp"
        android:background="#ffff387b" />

</RelativeLayout>
